Finish Kotlin conversion, now at Java 1.8, etc.
* Finish converting classes that need to be written in Kotlin
* Changed the default Java version to 1.8
* Rewrite some Kotlin to be more idiomatic
* Fix a bug where Recorder would throw an exception
* Fix a bug where out-of-range notes on some instruments would error
* Fix choir transitioning
* Refactor Midis2jam2 to support device-dependent implementations
(specifically for Android)
* Update Gradle dependencies and cleanup build script